--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "serve": "vite preview"
     },
     "dependencies": {
+        "axios": "^0.21.1",
         "vue": "^3.0.5"
     },
     "devDependencies": {
