--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "serve": "vite preview"
     },
     "dependencies": {
+        "@xiaobai-world/api": "0.0.6",
         "axios": "^0.21.1",
         "vue": "^3.0.5"
     },
